--- a/Darbu_portfolio.tex
+++ b/Darbu_portfolio.tex
@@ -70,15 +70,15 @@
 	\item 
 \href{https://github.com/Luksys5/LT_programos/tree/tinklai}{Kompiuterinių tinklų programos}
 	\item 
-\href{}{Duomenų tyrimas.} \\\\
+\href{https://github.com/Luksys5/LT_programos/tree/Duomenu_Tyrimas}{Duomenų tyrimas.} \\\\
 \end{itemize}
 
 \textbf{C, C++, C\#}
 \begin{itemize}
 	\item 
-\href{}{Dirbtinio intelekto paskaitų programos.}
+\href{https://github.com/Luksys5/LT_programos/tree/Dirbtini_Iq}{Dirbtinio intelekto paskaitų programos.}
 	\item 
-\href{}{Bioinformatikos paskaitų programos.} \\\\
+\href{https://github.com/Luksys5/LT_programos/tree/Bioinformatika_4k}{Bioinformatikos paskaitų programos.} \\\\
 \end{itemize}
 
 \textbf{Perl, Shell, Bash}
