Added new job practics experience Corrected some minor mistakes

--- a/CV.tex
+++ b/CV.tex
@@ -98,10 +98,10 @@ Vilnius \ \  2015
 \textbf{2000-2012} \\
 Anykščių Jono Biliūno gimnazija. Sustiprinti dalykai: biologija, matematika, fizika, informatika. \\
 
-\textbf{2012 - dabar}
-Vilniaus Matematikos ir informatikos fakulteto bioinformatikos
+\textbf{2012 - dabar} \\ 
+Vilniaus Matematikos ir informatikos fakulteto bioinformatikos specialybės studentas
 
-\textbf{Kursinis} \\
+\textbf{Kursinis - Bakalaurinis} \\
 DNR replikacijos procesyvumo veiksnių ir homologų struktūrų analizė. \\
 Vadovas: Darius Kazlauskas\\
 Atlikta: VU Biotechnologijos instituto, Bioinformatikos skyriuje, Vilnius. 
@@ -110,7 +110,7 @@ Atlikta: VU Biotechnologijos instituto, Bioinformatikos skyriuje, Vilnius.
 \begin{itemize}
 	\item DNR replikacijos procesyvumo veiksnių ir homologų struktūrų analizė. Vadovas: Darius Kazlauskas, Vilniaus Universiteto Biotechnologijos institutas, Bioinformatikos skyrius, Vilnius. 
 	\item Programų sistemų projektavimas, tinklapių kūrimas;
-	\item Programavimo kalbų: C++, C\#, Python panaudojimas bei testavimas;
+	\item Programavimo kalbų: C++, C\#, Python panaudojimas, žaidimų kūrimas bei programų testavimas;
 	\item Molekulių judėjimo bei sąveikos tarp jų nagrinėjimas, diferencialinių lyčių sprendimas, 
 statistiniai tyrimai.
 \end{itemize}
@@ -122,10 +122,14 @@ statistiniai tyrimai.
 
 \section{Darbo įgudžiai}
 \textbf{2015/01/01 iki 2015/05/31} \\
-2, 3 kurse atlikinėjau praktiką Vilniaus Universiteto Biotechnologijos institute, bioinformatikos skyriuje, įgyjau pagrindines bioinformatikos žinias, bei Python programavimo pagrindus.   \\
-Darbas Vilniaus Universiteto Biotechnologijos institute, bioinformatikos skyriuje. Atliktas kursinis bei vykdomas kursinio projektas, baltymų pirminės antrinės strutūros  analizė iš įvairių organizmų. 
+Nuo antro iki ketvirto kurso atlikta bioinformatikos praktika bei darbas su Python kalba Vilniaus Universiteto Biotechnologijos institute, bioinformatikos skyriuje. \\
 
-\vspace{2cm}
+\vspace{0.5cm}
+\textbf{2016/02/01 iki 2015/03/01} \\
+Mėnesio žaidimų programuotojo praktika "NordCurrent" imonėje su C++ objektine programavimo kalba.
+\vspace{0.5cm}
+
+
 
 \section{Pagrindiniai įgudžiai}
 \textbf{Kalbos}
@@ -136,9 +140,11 @@ Darbas Vilniaus Universiteto Biotechnologijos institute, bioinformatikos skyriuj
 
 \textbf{IT įgudžiai}
 \begin{enumerate}
-	\item C, C\#, C++, Java Progamavimo kalbų pagrindai (2 metai).
-	\item Python, Perl programavimo kalbos (praktikos metu, 3 metai).
-	\item HTML, PHP, JS (3 metai).
+	\item C++ įvairių programų kūrimas bei praktika (2 metai).
+	\item Pomėgis kuriant žaidimus su Unity, C\# programavimo kalba (1 metai).
+	\item C, Java Progamavimo kalbų pagrindai (1 metai).
+	\item Python, Perl programavimo kalbos (3 metai).
+	\item HTML, PHP, JS (1 metai).
 \end{enumerate}
 
 \textbf{Kiti įgudžiai}
@@ -161,9 +167,10 @@ Darbas Vilniaus Universiteto Biotechnologijos institute, bioinformatikos skyriuj
 
 \textbf{Laisvalaikio užsiėmimai}
 \begin{itemize}
-	\item Kompiuteriniai žaidimai (FPS, RPG, MOBA)
-	\item Detektyvinės knygos
-	\item stalo žaidimai (pvz.: šachmatai)
+	\item Kurti žaidimus
+	\item Žaisti kompiuterinius žaidimus (FPS, RPG, MOBA)
+	\item Skaityti Detektyvines knygas
+	\item Žaisti stalo žaidimus (pvz.: šachmatus)
 \end{itemize}
 
 \textbf{Muzika}
