Don't know what im doing

--- a/CV.tex
+++ b/CV.tex
@@ -98,11 +98,11 @@ Vilnius \ \  2015
 \textbf{2000-2012} \\
 Anykščių Jono Biliūno gimnazija. Sustiprinti dalykai: biologija, matematika, fizika, informatika. \\
 
-\textbf{2012 - dabar} \\ 
+\textbf{2012 - 2016} \\ 
 Vilniaus Matematikos ir informatikos fakulteto bioinformatikos specialybės studentas
 
 \textbf{Kursinis - Bakalaurinis} \\
-DNR replikacijos procesyvumo veiksnių ir homologų struktūrų analizė. \\
+DNR replikacijos procesyvumo veiksnių ir homologų struktūrų analizė kompiuteriniais metodais. \\
 Vadovas: Darius Kazlauskas\\
 Atlikta: VU Biotechnologijos instituto, Bioinformatikos skyriuje, Vilnius. 
 
