--- a/CV_eng.tex
+++ b/CV_eng.tex
@@ -59,13 +59,13 @@
 
 \vspace{5cm}
 
-\textbf{Aderess}
+\textbf{Address}
 \begin{itemize}
 	\item Didlaukio g. 59, Vilnius, 08302, Lietuva. 
 	\item Anykščių vns., Anykščiai, 29159, Lietuva.
 \end{itemize}
 
-\textbf{Kontaktai}
+\textbf{Contacts}
 \begin{itemize}
 	\item \textbf{Phone:} 869363208
 	\item \textbf{Email:} lt.tutkus7@gmail.com
@@ -73,8 +73,8 @@
 
 \textbf{More information}
 \begin{itemize}
-	\item \textbf{Gimimo data}: 1992 - 10 - 19
-	\item \textbf{Tautybė}: Lietuvis
+	\item \textbf{Birth date}: 1992 - 10 - 19
+	\item \textbf{Nationality}: Lithuanian
 \end{itemize}
 \vfill
 
@@ -85,32 +85,34 @@ Vilnius \ \  2015
 
 \clearpage
 
-\section{Abilities}
+\section{Personal qualities}
 \begin{itemize}
-	\item Working in team I found myself very helpful in finding best solution and in resolving difficult problems.
-	\item Sugebu prisitaikyti įvairiose situacijose, taip pat esu užsispyręs, tai man padeda įveikti ne vieną dieną darytą darbą.
-	\item I am diplomatic and take all critics. I am also doing my best to improve and pastabos make isvados.
-	\item I like accurate 
-	\item I' am open to new technologies and in various situations I'm trying to get out of comfort zone and move forward.
+	\item In team work I always try my best in finding problems solution
+	\item I can easily adapt in various situations and  becouse of I'm stubborn I can overcome all problems in work.
+	\item I'm diplomatic and doing my best to improve from any given remarks or critics.
+	\item I'm slow at a times so it would be more useful to give precise tasks.
+	\item I'm open to new technologies and attempting to move forward in various situations.
 \end{itemize}
 
 \section{Education}
 \textbf{2000-2012} \\
-Anykščių Jono Biliūno gimnazija. Best sritys: biology, mathematics, physics, informatics. \\
+Anykščių Jono Biliūno gimnazija. Best known areas: biology, mathematics, physics, informatics. \\
 
 \textbf{2012 - 2016} \\ 
-Student of Vilnius Mathematic and Informatics facultet speciality - bioinformatics.
+Student of Vilnius University Mathematic and Informatics faculty, specialty - bioinformatics.
 
 \textbf{Bachelour} \\
-DNR replication processivity factors analysis.
-Vadovas: Darius Kazlauskas\\
-Done in: VU biotechnology institution, bioinformatics skyrius. 
+Theme name: DNR replication processivity factors analysis.
+Executive: Darius Kazlauskas\\
+Done in: VU biotechnology institution, bioinformatics section. 
 
-\textbf{Bakalauro studijų metu įgytos žinios}
+\textbf{Knowledge from bachelour studies}
 \begin{itemize}
-	\item Programming system project, Website development(HTML, CSS, JS, PHP);
-	\item Programming languages: C++, C\#, Python, Game development and programs testing;
-	\item Molecular movement and interactions, formulating these process into differential mathematics and finding solutions, statistical experiments.
+	\item Programming system engineer, website development(HTML, CSS, JS, PHP);
+	
+	\item Programming languages: C++, C\#, Python, Game development and programs testing with Makefiles;
+	
+	\item Molecular movement and interactions, formulating these process into differential mathematics equation and finding solutions, performing statistical experiments.
 \end{itemize}
 
 \clearpage
@@ -118,18 +120,17 @@ Done in: VU biotechnology institution, bioinformatics skyrius.
 \vspace{8cm}
 
 
-\section{Darbo įgudžiai}
+\section{Work skills}
 \textbf{2015/01/01 iki 2015/05/31} \\
-Practics a job in biotechnology institution from second to fourth grade. Job consist of making scripts for fast and easy solutions in Python.
+Practics in biotechnology institution from second to fourth course. Also spend half year working there as a Python programmer.
 
 \vspace{0.5cm}
 \textbf{2016/02/01 iki 2015/03/01} \\
-One month job as game developer in "Nordcurrent" company. Learned much about oop C++ programming language, created two games.
+Game developer in "Nordcurrent" company. Learned much about objectiver orientated C++ programming also created two simple games.
 \vspace{0.5cm}
 
 
-
-\section{Main abilities}
+\section{Basic skills}
 \textbf{Languages}
 \begin{enumerate}
 	\item English - C1 level speaking and B2 level writing. 
@@ -139,22 +140,26 @@ One month job as game developer in "Nordcurrent" company. Learned much about oop
 \textbf{IT}
 \begin{enumerate}
 	\item C++ various programs creation in University and some in leisure time also practics. (2 years).
-	\item Hobby creating games with unity, C\# programming language (1 year).
+	
+	\item Creating games with unity, C\# programming language (1 year).
+	
 	\item C, Java programming languages basics(less than 1 year).
+	
 	\item Python, Perl programming languages (3 years).
+	
 	\item HTML, CSS, PHP, JS (1 year).
 \end{enumerate}
 
 \textbf{Other}
 \begin{enumerate}
-	\item Vim in Linux environment, VS in Windows using abilities.
+	\item Vim in Linux environment, Visual Studio in Windows.
 	\item Worked a lot with programms like Unity, R, Mapple, Latex.
 	\item Practics in music creation with Magix Music Maker.
 \end{enumerate}
 
 \clearpage
 
-\section{Hobbys}
+\section{Hobbies}
 \textbf{Sport}
 \begin{itemize}
 	\item Basketball
@@ -167,13 +172,13 @@ One month job as game developer in "Nordcurrent" company. Learned much about oop
 \begin{itemize}
 	\item Game creation
 	\item Playing PC games(FPS, RPG, MOBA)
-	\item Read action, detective books.
-	\item Play desk games (Chess)
+	\item Read action, detective or other type intresting books.
+	\item Play desk games (Chess).
 \end{itemize}
 
 \textbf{Music}
 \begin{itemize}
-	\item Like to play guitar and piano.
+	\item Playing with guitar and piano.
 	\item Create music with electric piano.
 \end{itemize}
 
